--- a/deep.html
+++ b/deep.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
     <title>Document</title>
+    <style>
+    ul{list-style-type:disc;}
+    </style>
 </head>
 <body>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam iusto iure sapiente omnis natus cupiditate sequi veniam rerum officia necessitatibus illo ex veritatis pariatur non aliquid, culpa dicta deleniti explicabo expedita aut fugiat porro! Consequatur assumenda velit perferendis eaque explicabo quod earum praesentium, voluptatem temporibus quae nulla maiores iste tempora animi? Vel, atque labore laudantium odio vero rerum obcaecati quaerat, nemo, quibusdam nisi laboriosam fugiat? Consequatur labore quidem, neque voluptatibus tenetur minima sit sint, explicabo eveniet quibusdam possimus quam ullam est pariatur. Quam officiis quibusdam nemo soluta maxime impedit fuga officia, laborum consequatur, deleniti qui iure vero pariatur magni corrupti!
+    <h1>fruits</h1>
+   <ol>
+    <li>mango</li>
+    <li>gauvava</li>
+    <li>orange</li>
+    <li>banana</li>
+    <li>pineapple</li>
+
+    
+   </ol>
+
+   <ol>
+    <li>vegetable</li>
+    <ul><li>potato</li>
+    <li>brinjle</li>
+    <li>onion</li>
+    <li>green chilli</li>
+    <li>corinader</li>
+    <li>capsicum</li></ul>
+   </ol>
 </body>
 </html>
