--- a/deept.html
+++ b/deept.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
-    
-    <title>Document</title>
+    <style>
+  #heading1{color:red;} 
+  .item1{
+    color:blue;
+  } 
+    </style>
+ <title>Document</title>
 </head>
 <body>
-    deep
+    <a href="#section1">home1</a>
+    <a href="#section2">home2</a>
+    <a href="#section3">home3</a>
+    <a href="#section4">home4</a>
+    <a href="#section5">home5</a>
+    <a href="#section6">home6</a>
+    <a href="#section7">home7</a>
+
+    <h1 id="section1">section1</h1>
+    <p id="section1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis modi ab id! Totam tenetur iste iure quidem officia dignissimos iusto provident laborum voluptas omnis quibusdam, voluptate maxime mollitia inventore? Quae, debitis, quam neque ad molestiae ab dicta dolorum fugit, animi consequatur eum nesciunt est facere blanditiis nihil? Quasi facilis quod aliquid quisquam aspernatur tempore optio ab aliquam nisi sint sequi rerum repudiandae voluptate, id hic voluptatem cupiditate distinctio reprehenderit. Earum et assumenda eos esse animi id iure magni mollitia voluptate. Eveniet quod porro veniam laudantium sequi? Corrupti, odit alias voluptate voluptas neque doloribus corporis maiores laboriosam animi, nulla illo error.
+    </p>
+    <h1 id="section2">section2</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos dolor id magni omnis accusantium enim blanditiis maxime. Dolorem quaerat sequi, esse similique asperiores molestiae veritatis blanditiis eius quia repellendus impedit itaque ad nobis accusantium sit! Repellendus expedita voluptatibus rem. Obcaecati harum, adipisci amet ut similique fuga sed inventore, molestiae aut nobis distinctio nostrum assumenda iure earum quasi dolor dolores quidem totam quod sequi? Quibusdam reprehenderit fuga illum id pariatur ut sequi, veniam esse consequatur voluptas ratione blanditiis molestiae velit! Vel, quisquam earum officia ut obcaecati repudiandae libero et voluptatibus, ea adipisci aliquid doloribus, qui laborum ad molestias nulla repellendus? Animi.</p>
+    <h1 id="section3">section3</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iure fugit pariatur placeat accusamus repellendus sint aperiam magnam neque corrupti quam quasi alias perferendis rerum, quae at fugiat. Quia ullam facere reprehenderit aperiam minus quisquam, molestiae, velit voluptas laborum repellendus modi quis veritatis nostrum vero accusantium, reiciendis ea mollitia laboriosam quam! Dolore earum ad architecto dicta, facilis mollitia asperiores aliquid iusto odio. Assumenda eligendi repudiandae minima id eveniet exercitationem repellat esse, doloremque nesciunt reprehenderit doloribus voluptate sint perspiciatis ducimus ullam numquam consequatur quibusdam necessitatibus delectus temporibus laborum quam. Provident reiciendis minus sequi natus sit rem officia eveniet asperiores facere explicabo?
+    </p>
+    <h1 id="section4">section4</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iure fugit pariatur placeat accusamus repellendus sint aperiam magnam neque corrupti quam quasi alias perferendis rerum, quae at fugiat. Quia ullam facere reprehenderit aperiam minus quisquam, molestiae, velit voluptas laborum repellendus modi quis veritatis nostrum vero accusantium, reiciendis ea mollitia laboriosam quam! Dolore earum ad architecto dicta, facilis mollitia asperiores aliquid iusto odio. Assumenda eligendi repudiandae minima id eveniet exercitationem repellat esse, doloremque nesciunt reprehenderit doloribus voluptate sint perspiciatis ducimus ullam numquam consequatur quibusdam necessitatibus delectus temporibus laborum quam. Provident reiciendis minus sequi natus sit rem officia eveniet asperiores facere explicabo?
+    </p>
+    <h1 id="section5">section5</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iure fugit pariatur placeat accusamus repellendus sint aperiam magnam neque corrupti quam quasi alias perferendis rerum, quae at fugiat. Quia ullam facere reprehenderit aperiam minus quisquam, molestiae, velit voluptas laborum repellendus modi quis veritatis nostrum vero accusantium, reiciendis ea mollitia laboriosam quam! Dolore earum ad architecto dicta, facilis mollitia asperiores aliquid iusto odio. Assumenda eligendi repudiandae minima id eveniet exercitationem repellat esse, doloremque nesciunt reprehenderit doloribus voluptate sint perspiciatis ducimus ullam numquam consequatur quibusdam necessitatibus delectus temporibus laborum quam. Provident reiciendis minus sequi natus sit rem officia eveniet asperiores facere explicabo?
+    </p>
+    <h1 id="section6">section6</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iure fugit pariatur placeat accusamus repellendus sint aperiam magnam neque corrupti quam quasi alias perferendis rerum, quae at fugiat. Quia ullam facere reprehenderit aperiam minus quisquam, molestiae, velit voluptas laborum repellendus modi quis veritatis nostrum vero accusantium, reiciendis ea mollitia laboriosam quam! Dolore earum ad architecto dicta, facilis mollitia asperiores aliquid iusto odio. Assumenda eligendi repudiandae minima id eveniet exercitationem repellat esse, doloremque nesciunt reprehenderit doloribus voluptate sint perspiciatis ducimus ullam numquam consequatur quibusdam necessitatibus delectus temporibus laborum quam. Provident reiciendis minus sequi natus sit rem officia eveniet asperiores facere explicabo?
+    </p>
+    <h1 id="section7">section7</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iure fugit pariatur placeat accusamus repellendus sint aperiam magnam neque corrupti quam quasi alias perferendis rerum, quae at fugiat. Quia ullam facere reprehenderit aperiam minus quisquam, molestiae, velit voluptas laborum repellendus modi quis veritatis nostrum vero accusantium, reiciendis ea mollitia laboriosam quam! Dolore earum ad architecto dicta, facilis mollitia asperiores aliquid iusto odio. Assumenda eligendi repudiandae minima id eveniet exercitationem repellat esse, doloremque nesciunt reprehenderit doloribus voluptate sint perspiciatis ducimus ullam numquam consequatur quibusdam necessitatibus delectus temporibus laborum quam. Provident reiciendis minus sequi natus sit rem officia eveniet asperiores facere explicabo?
+    </p>
 </body>
+
 </html>
